# sqlparser-rs

./: .gitignore  CLAUDE.md  Cargo.toml
.cargo/: config.toml
.claude/: fix-corpus-loop.md  ralph-loop.local.md
.config/: nextest.toml
.github/workflows/: corpus.yml  test.yml
.run/: nextest [sqlparser-rs].run.xml
examples/: cli.rs
scripts/: README.md  compare-corpus-reports.js  corpus-errors.py  fix-corpus-loop.sh  run-corpus-tests.sh
src/: keywords.rs  parser.rs  test_utils.rs  tokenizer.rs
src/ast/: data_type.rs  dcl.rs  ddl.rs  mod.rs  operator.rs  query.rs  value.rs  visitor.rs
src/ast/helpers/: stmt_create_table.rs
src/dialect/: ansi.rs  bigquery.rs  clickhouse.rs  databricks.rs  duckdb.rs  generic.rs  mod.rs  postgresql.rs  redshift.rs  snowflake.rs
src/parser/: mod.rs
tests/: pr7123_samples.rs  redshift_customer_procedure_samples.rs  sqlparser_bigquery.rs  sqlparser_clickhouse.rs  sqlparser_common.rs  sqlparser_corpus.rs  sqlparser_databricks.rs  sqlparser_duckdb.rs  sqlparser_error_perf.rs  sqlparser_hive.rs  sqlparser_mssql.rs  sqlparser_mysql.rs  sqlparser_postgres.rs  sqlparser_redshift.rs  sqlparser_snowflake.rs  sqlparser_sqlite.rs
