[package]
name = "sqlparser"
description = "Extensible SQL Lexer and Parser with support for ANSI SQL:2011"
version = "0.38.0"
authors = ["Andy Grove <andygrove73@gmail.com>"]
homepage = "https://github.com/sqlparser-rs/sqlparser-rs"
documentation = "https://docs.rs/sqlparser/"
keywords = ["ansi", "sql", "lexer", "parser"]
repository = "https://github.com/sqlparser-rs/sqlparser-rs"
license = "Apache-2.0"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE.TXT",
]
edition = "2021"

[lib]
name = "sqlparser"
path = "src/lib.rs"

[features]
default = ["std"]
std = []
# Enable JSON output in the `cli` example:
json_example = ["serde_json", "serde"]
visitor = ["sqlparser_derive"]

[dependencies]
bigdecimal = { version = "0.4.5", features = ["serde"], optional = true }
log = "0.4.22"
serde = { version = "1.0", features = ["derive"], optional = true }
# serde_json is only used in examples/cli, but we have to put it outside
# of dev-dependencies because of
# https://github.com/rust-lang/cargo/issues/1596
serde_json = { version = "1.0.128", optional = true }
sqlparser_derive = { version = "0.1.1", path = "derive", optional = true }
time = { version = "0.3.36", optional = true }
walkdir = "2"
rayon = "1.10"

[dev-dependencies]
simple_logger = "5.0.0"
matches = "0.1.10"
pretty_assertions = "1.4.0"
libtest-mimic = "0.8"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bin]]
name = "corpus-runner"
path = "src/bin/corpus_runner.rs"

[package.metadata.release]
# Instruct `cargo release` to not run `cargo publish` locally:
# https://github.com/sunng87/cargo-release/blob/master/docs/reference.md#config-fields
# See docs/releasing.md for details.
publish = false

[package.metadata.docs.rs]
# Document these features on docs.rs
features = ["serde", "visitor"]
